--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@ layout: default
 
 
 <div class="home">
-	
+
 <h1>Welcome</h1>
-	
+
 <p> This is my academic website.</p>
-<p> </p>
+<p> I am particularly interested in Data Analysis, Parallel Programming, OpenMP, High Performance Computing, Distributed Computing. I have expertise in different tools for High Performance Computing and Software Developing.</p>
 
 </div>
